
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u8 ;



bool class_upper (const u8 c)
{
  return ((c >= 'A') && (c <= 'Z'));
}
